Fixing Title image when you are on mobile

--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -68,6 +68,18 @@ p {
   right: 30%;
 }
 
+@media (max-width: 900px) {
+  #title {
+    text-align: center;
+  }
+
+  #iphone-img {
+    width: 60%;
+    position: static;
+    transform: rotate(0);
+  }
+}
+
 /* Features */
 
 #features {
